fix: tooltip overflow/implement tooltip component

--- a/src/styles/theme-default.css
+++ b/src/styles/theme-default.css
@@ -29,4 +29,8 @@
 
   /*mobile header search overlay */
   --color-bg-search: rgba(36, 36, 36, 0.94);
+
+  /* tooltip*/
+  --tooltip-bg: rgba(218, 218, 218, 0.5);
+
 }
