--- a/src/styles/theme-light.css
+++ b/src/styles/theme-light.css
@@ -16,4 +16,7 @@
   --color-bg-main-nav-bar: #242424;
 
   --color-bg-search: rgba(218, 218, 218, 0.94);
+
+  /* tooltip*/
+  --tooltip-bg: rgba(36, 36, 36, 0.5);
 }
